# atman

./: .dockerignore  .env.example  .gitignore  CHANGELOG_v1_0_1_to_v1_0_5.md  CHANGELOG_v1_0_5_to_v2_0.md  CHANGELOG_v1_0_to_v1_0_1.md  Makefile  README.md  REPO_STATUS.md  alembic.ini  docker-compose.qwen.yml  docker-compose.yml  manifest.json  manifest_v1_0_1.json  manifest_v2_0.json  package.json  pyproject.toml  railway.json
docs/: ANALYTICS_BILLING_V1_0_5.md  API_EXAMPLES.md  API_EXAMPLES_CONTENT_FACTORY.md  API_EXAMPLES_CORPUS.md  API_EXAMPLES_EVAL_SOURCE_EXPLORER.md  API_EXAMPLES_PUBLIC_QWEN.md  ARCHITECTURE.md  ATMAN_APP_INTERFACE_V1_0_1.md  ATMAN_V2_0_DHARMA_KNOWLEDGE_OS.md  CANONICAL_CORPUS_DB_AND_RELAXED_INGESTION_V1_0_1.md  CHATBOT_PRODUCT_RUNBOOK_V1_0_5.md  CLOUDFLARE_FRONTEND_DEPLOY.md  CONTENT_FACTORY_V0_4.md  CONTENT_REVIEW_WORKFLOW.md  CORPUS_INGESTION_AND_REVIEW_V0_6.md  CORPUS_REVIEW_WORKFLOW.md  DEPLOYMENT_V1_0_5.md  EVAL_HARDENING_V0_7.md  EXPORT_FORMATS.md  K8S_DEPLOYMENT.md  MODEL_LAB_PARALLEL_FINETUNING_RUNBOOK.md  PRODUCTION_RELEASE_V1_0.md  PRODUCTION_RUNBOOK.md  PUBLIC_APP_AND_QWEN_RUNTIME_V0_5.md  PUBLIC_APP_ROUTE_MAP.md  QWEN_RUNTIME_RUNBOOK.md  QWEN_SERVING_V1_0_1.md  QWEN_TRAINING_MODELOPS_V0_9.md  RAILWAY_BACKEND_DEPLOY.md  REMOTE_QWEN_API_ONLY_RUNBOOK.md  SECURITY_HARDENING.md  SOURCE_EXPLORER_V0_7.md  V1_0_5_PRODUCT_APP_RELEASE.md  WEB_TO_CORPUS_AND_OCR_V0_8.md  WIDE_CORPUS_ACQUISITION_V1_0_5.md
fixtures/: content_batch_request.json  corpus_sample_gita.txt  corpus_upload_request.md  training_dataset_request.json  web_source_request.json
(+337 files in other folders)
