[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atman-platform"
version = "2.0.0"
description = "Atman v2.0 Dharma Knowledge OS with remote-Qwen chatbot, canonical corpus, content studio, analytics, and parallel Model Lab for Qwen fine-tuning R&D"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",
  "python-multipart>=0.0.9",
  "qdrant-client>=1.11.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "tenacity>=8.5.0",
  "numpy>=1.26.0",
  "pypdf>=4.3.0",
  "beautifulsoup4>=4.12.0",
  "trafilatura>=1.12.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-redis>=4.6.0.20240425"
]
qwen = [
  "transformers>=4.51.0",
  "accelerate>=1.6.0",
  "torch>=2.6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "packages*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]


# v0.5 optional runtime extras
